[metadata]
name = madym_qbi
version = attr: madym.__version__
author = Michael Berks
author_email = michael.berks@manchester.ac.uk
description = Python wrappers to the Madym C++ toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/manchester_qbi/manchester_qbi_public/madym_python
project_urls =
    Bug Tracker = https://gitlab.com/manchester_qbi/manchester_qbi_public/madym_python/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = src